force-app/main/default/objects/Bitbucket_Settings__c/Bitbucket_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores Bitbucket integration configuration settings</description>
    <label>Bitbucket Settings</label>
</CustomObject>