force-app/main/default/objects/Bitbucket_Settings__c/fields/API_Version__c.field-meta.xml
<CustomField>
    <fullName>API_Version__c</fullName>
    <defaultValue>&quot;2.0&quot;</defaultValue>
    <description>Bitbucket API version to use</description>
    <inlineHelpText>Bitbucket API version (default is 2.0)</inlineHelpText>
    <label>API Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>