force-app/main/default/objects/Bitbucket_Settings__c/fields/Auth_Type__c.field-meta.xml
<CustomField>
    <fullName>Auth_Type__c</fullName>
    <description>The authentication type to use for Bitbucket API calls</description>
    <inlineHelpText>Select the authentication type. Use API_TOKEN for App passwords or REPOSITORY_ACCESS_TOKEN for repository-specific tokens.</inlineHelpText>
    <label>Authentication Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>