force-app/main/default/objects/Bitbucket_Settings__c/fields/Default_Branch__c.field-meta.xml
<CustomField>
    <fullName>Default_Branch__c</fullName>
    <defaultValue>&quot;main&quot;</defaultValue>
    <description>The default branch name to use for API operations</description>
    <inlineHelpText>Enter the default branch name (e.g., main, master, develop)</inlineHelpText>
    <label>Default Branch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>