force-app/main/default/objects/Bitbucket_Settings__c/fields/Enable_Debug_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Debug_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable debug logging for Bitbucket API calls</description>
    <inlineHelpText>Check this box to enable detailed debug logging of API calls</inlineHelpText>
    <label>Enable Debug Logging</label>
    <type>Checkbox</type>
</CustomField>