force-app/main/default/objects/Bitbucket_Settings__c/fields/Max_Retry_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Retry_Attempts__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Maximum number of retry attempts for failed API calls</description>
    <inlineHelpText>Maximum number of retry attempts for failed API calls (default: 3)</inlineHelpText>
    <label>Max Retry Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>