force-app/main/default/objects/Bitbucket_Settings__c/fields/Named_Credential_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_Name__c</fullName>
    <description>The name of the Named Credential to use if enabled</description>
    <inlineHelpText>Enter the name of the Named Credential to use (only required if Use Named Credential is checked)</inlineHelpText>
    <label>Named Credential Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>