force-app/main/default/objects/Bitbucket_Settings__c/fields/Repository_Slug__c.field-meta.xml
<CustomField>
    <fullName>Repository_Slug__c</fullName>
    <description>The Bitbucket repository slug (repository name in URL format)</description>
    <inlineHelpText>Enter your Bitbucket repository slug. This is the repository name as it appears in the URL (lowercase, with hyphens instead of spaces).</inlineHelpText>
    <label>Repository Slug</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>