force-app/main/default/objects/Bitbucket_Settings__c/fields/Timeout_MS__c.field-meta.xml
<CustomField>
    <fullName>Timeout_MS__c</fullName>
    <defaultValue>60000</defaultValue>
    <description>API call timeout in milliseconds</description>
    <inlineHelpText>API call timeout in milliseconds (default: 60000 = 60 seconds)</inlineHelpText>
    <label>Timeout (ms)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>