force-app/main/default/objects/Bitbucket_Settings__c/fields/Use_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Use_Named_Credential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use Named Credential instead of Custom Settings for authentication</description>
    <inlineHelpText>Check this box to use a Named Credential for authentication instead of storing credentials in Custom Settings</inlineHelpText>
    <label>Use Named Credential</label>
    <type>Checkbox</type>
</CustomField>