force-app/main/default/objects/Bitbucket_Settings__c/fields/Workspace__c.field-meta.xml
<CustomField>
    <fullName>Workspace__c</fullName>
    <description>The Bitbucket workspace name (previously known as team or username)</description>
    <inlineHelpText>Enter your Bitbucket workspace name. This is typically your team name or username that appears in your Bitbucket URL.</inlineHelpText>
    <label>Workspace</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>